# inscriber

./: .env  .gitignore  README.md  consts.ts  ecpair.ts  index.ts  inscribe.ts  mock.ts  package.json  token_mint.json  tsconfig.json  types.ts  utils.ts  wallet.ts
tx-pusher/: .gitignore  Cargo.toml
tx-pusher/src/: main.rs
tx-pusher/src/types/: mod.rs
