[package]
name = "tx-pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
reqwest = {version = "0.11.24", features = ["json"]}
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
tokio = {version = "1.36.0", features = ["full"]}
